<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/single_step_description_rootView">

    <TextView
        android:id="@+id/recipe_steps_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_style"
        android:textAlignment="center"
        android:layout_margin="4dp"
        android:textColor="@color/md_black_1000"
        android:textSize="20sp" />

</LinearLayout>
