<resources>
    <string name="app_name">BakingApp</string>
    <string name="ingredients"> List of Ingredients Needed</string>
    <string name="steps">STEPS</string>
    <string name="measure">Measure:</string>
    <string name="quantity">Quantity:</string>
    <string name="ingredient_list">Ingredient:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="recipes">Choose a Recipe</string>
    <string name="List_of_ingredients">List of Ingredients Needed</string>
    <string name="steps_to_make_recipe">STEPS TO MAKE RECIPE</string>
    <string name="ingre">INGREDIENTS</string>
</resources>
