<?xml version="1.0" encoding="utf-8"?>

<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/master_list_fragment"
    android:name="com.example.cletrezo.bakingapp.Fragments.RecipeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
</fragment>

    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_recyclerView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" />
-->

